--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://ahmadatypon-VirtualBox:3306/testDB
+spring.datasource.url=jdbc:mysql://ahmad-VirtualBox:3306/testDB
 spring.datasource.username=root
 spring.datasource.password=root
